--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HsExercise</string>
+    <string name="image_dimensions">Dimensions: %1$d x %2$d</string>
 </resources>
