--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">HsExercise</string>
     <string name="image_dimensions">Dimensions: %1$d x %2$d</string>
+    <string name="initial_load_empty_message">Nothing here…</string>
+    <string name="initial_load_error_message">Something is wrong…</string>
+    <string name="load_more_failed_error_message">Unable to load additional items</string>
 </resources>
